# Cache

./: .gitignore  bundle.md  pytest.ini
.github/workflows/: ci.yml
behaviors/: hybrid-cache.yaml
context/: hybrid-cache-awareness.md
docs/plans/: 2026-02-23-hybrid-cache-design.md  2026-02-23-hybrid-cache-plan.md  2026-02-24-task-5-provider-wrapper.md  2026-02-25-openai-embedder.md  2026-02-26-cache-metrics-plan.md  2026-02-26-openai-embedder-plan.md  2026-02-26-openai-embedder.md
modules/cache-normalizer/: pyproject.toml
modules/cache-normalizer/cache_normalizer/: __init__.py  normalize.py
modules/cache-provider-wrapper/: pyproject.toml
modules/cache-provider-wrapper/cache_provider_wrapper/: __init__.py  mount.py  provider.py
modules/cache-store-chroma/: pyproject.toml
modules/cache-store-chroma/cache_store_chroma/: __init__.py  store.py
modules/cache-store-sqlite/: pyproject.toml
modules/cache-store-sqlite/cache_store_sqlite/: __init__.py  store.py
modules/cache-tool-wrapper/: pyproject.toml
modules/cache-tool-wrapper/cache_tool_wrapper/: __init__.py  mount.py  tool.py
modules/embedder-openai/: pyproject.toml
modules/embedder-openai/embedder_openai/: __init__.py  client.py  mount.py
tests/: conftest.py  test_cache_normalizer.py  test_cache_provider_wrapper.py  test_cache_store_chroma.py  test_cache_store_sqlite.py  test_cache_tool_wrapper.py  test_embedder_openai.py
