[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cache-normalizer"
version = "0.1.0"
description = "Cache normalization utilities"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["cache_normalizer*"]
