[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cache-provider-wrapper"
version = "0.1.0"
description = "Cache provider wrapper"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["cache_provider_wrapper*"]
