[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedder-openai"
version = "0.1.0"
description = "OpenAI embedder module for semantic cache"
requires-python = ">=3.10"
dependencies = ["openai>=1,<2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["embedder_openai*"]
